Fix overflow-hidden forum text and namespace spurious icon back into phpbb land

--- a/less/rascal.less
+++ b/less/rascal.less
@@ -160,7 +160,7 @@ ul.topiclist dt {
     width: 45%; /* Shrink the titles a little so that the usernames and dates don't wrap */
 }
 
-ul.linklist.rightside {
+ul.linklist.rightside, ul.linklist.leftside {
     overflow: visible;
     padding-bottom: 10px;
 }
